Mi Portafolio update

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ES">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,20 +7,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/jam-icons/css/jam.min.css">
-    <link rel="icon" href="/img/icono.ico" type="image/ico">
+    <link rel="icon" href="img/icono.ico" type="image/ico">
     <link rel="stylesheet" href="main.css">
-    <title> El Portafolio de Joel A. Abreu</title>
+    <title>El Portafolio de Joel A. Abreu</title>
 </head>
 
- <body>
+<body>
     <header>
         <div class="header-container">
-            <img class="header-img" src="/img/cambio.png" alt="Cerebro"> 
+            <img class="header-img" src="img/cambio.png" alt="Cerebro"> 
             <h3 class="header-titulo">Joel A. Abreu</h3>
         </div>
         <nav>
             <ul class="header-menu">
-                <li class="header-item"><a href="#Sobremi">Sobre mi</a></li>
+                <li class="header-item"><a href="#Sobremi">Sobre mí</a></li>
                 <li class="header-item"><a href="#Skills">Skills</a></li>
                 <li class="header-item"><a href="#Pastimes">Pastimes</a></li>
                 <li class="header-item"><a href="#learning">Learning</a></li>
@@ -33,202 +33,184 @@
         </nav>
     </header>
     <main> 
-     <section class="about-me">   
-        <div class="about-me-presentacion"> 
-            <h2 class="about-me-name"> Hola, mi Nombre es Joel A. Abreu De la Rosa y construyo paginas web.</h2>
-            <p class="about-me-presentacion-p"> Soy Developer Front end y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.
-            </p>
-            <div>
-                <ul class="redes">
-                    <li class="redes-item">
-                        <a href="https://github.com/JLK1425">
-                            <span class="jam jam-github"></span>
-                        </a>
-                    </li>
-                    <li class="redes-item">
-                        <a href="https://www.linkedin.com/in/joel-abreu-dev/">
-                            <span class="jam jam-linkedin"></span>
-                        </a>
-                    </li>
-                    <li class="redes-item">
-                        <a href="https://www.instagram.com/joel.abreu08/">
-                            <span class="jam jam-instagram"></span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div> 
-            
+        <section class="about-me">   
+            <div class="about-me-presentacion"> 
+                <h2 class="about-me-name">Hola, mi Nombre es Joel A. Abreu De la Rosa y construyo páginas web.</h2>
+                <p class="about-me-presentacion-p">Soy Developer Front end y actualmente estoy participando del proyecto Oracle ONE en Alura Latam.</p>
+                <div>
+                    <ul class="redes">
+                        <li class="redes-item">
+                            <a href="https://github.com/JLK1425">
+                                <span class="jam jam-github"></span>
+                            </a>
+                        </li>
+                        <li class="redes-item">
+                            <a href="https://www.linkedin.com/in/joel-abreu-dev/">
+                                <span class="jam jam-linkedin"></span>
+                            </a>
+                        </li>
+                        <li class="redes-item">
+                            <a href="https://www.instagram.com/joel.abreu08/">
+                                <span class="jam jam-instagram"></span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div> 
         </div>  
-            <div class="perfil">
-                <img src="/img/perfil.png" alt="Perfil">
-            </div>
-     </section>
-
-     <section class="about--title" id="Sobremi">
-        <div class="about--title-mi">
-            <h3 class="bio">Acerca de Mí</h3>
-            <p>
-                Soy un apasionado de la vida, enfocado  en tener el mejor desarrollo en mi entorno, con la aspiración de ser ejemplo para los demas. En el ambito laboral me dedico a la tecnología de la información, con conocimiento de programación en los lenguajes de Python, javaScript entre otros. Tambien poseo conocimiento en la gestion de calidad de software y en las técnicas de QA tester.
-            </p> 
-            <p>
-                Mi nivel de Ingles es bastante fluido. Actualmente me encargo del asesoramiento web a clientes que requieren el servicio de manera remota. Y también coordino el soporte tecnico web de una empresa de servicios de localización atravez de gps. Mi tarea alli es brindar soporte a los usuarios y actualizar los diferentes requerimientos de la web y aplicacion.
-            </p>  
+        <div class="perfil">
+            <img src="img/perfil.png" alt="Perfil">
         </div>
-        <img src="/img/firma.png" alt="firma">
-     </section>
+        </section>
 
-     <section class="skills" id="Skills">
-        <h3 class="skills-h3">Skills</h3>
-        <ul class="skills-list">
-            <li>
-                <div class="skills-item">
-                    <img src="/img/html-5.png" alt="HTML5">
-                    <h4>HTML 5</h4>
-                </div>
-            </li>
-            <li>
-                <div class="skills-item">
-                    <img src="/img/css-3.png" alt="CSS">
-                    <h4>CSS</h4>
-                </div>
-            </li>
-            <li>
-                <div class="skills-item">
-                    <img src="/img/js.png" alt="JavaScript">
-                    <h4>JavaScript</h4>
-                </div>
-            </li>
-            <li>
-                <div class="skills-item">
-                    <img src="/img/git.png" alt="GIT">
-                    <h4>GIT</h4>
-                </div>
-            </li>
-            <li>
-                <div class="skills-item">
-                    <img src="/img/figma.png" alt="FIGMA">
-                    <h4>FIGMA</h4>
-                </div>
-            </li>
-            <li>
-                <div class="skills-item">
-                    <img src="/img/python.png" alt="Python">
-                    <h4>PYTHON</h4>
-                </div>
-            </li>
-            <li>
-                <div class="skills-item">
-                    <img src="/img/php.png" alt="PHP">
-                    <h4>PHP</h4>
-                </div>
-            </li>
-        </ul>
-     </section>
+        <section class="about--title" id="Sobremi">
+            <div class="about--title-mi">
+                <h3 class="bio">Acerca de Mí</h3>
+                <p>Soy un apasionado de la vida, enfocado en tener el mejor desarrollo en mi entorno, con la aspiración de ser ejemplo para los demás. En el ámbito laboral me dedico a la tecnología de la información, con conocimiento de programación en los lenguajes de Python, JavaScript, entre otros. También poseo conocimiento en la gestión de calidad de software y en las técnicas de QA tester.</p>
+                <p>Mi nivel de inglés es bastante fluido. Actualmente me encargo del asesoramiento web a clientes que requieren el servicio de manera remota. Y también coordino el soporte técnico web de una empresa de servicios de localización a través de GPS. Mi tarea allí es brindar soporte a los usuarios y actualizar los diferentes requerimientos de la web y aplicación.</p>  
+            </div>
+            <img src="img/firma.png" alt="firma">
+        </section>
 
-     <section class="pastimes" id="Pastimes">
-        <h3>Pastimes</h3>
-        <ul class="pastimes-list">
-            <li>
+        <section class="skills" id="Skills">
+            <h3 class="skills-h3">Skills</h3>
+            <ul class="skills-list">
+                <li>
+                    <div class="skills-item">
+                        <img src="img/html-5.png" alt="HTML5">
+                        <h4>HTML 5</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="skills-item">
+                        <img src="img/css-3.png" alt="CSS">
+                        <h4>CSS</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="skills-item">
+                        <img src="img/js.png" alt="JavaScript">
+                        <h4>JavaScript</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="skills-item">
+                        <img src="img/git.png" alt="GIT">
+                        <h4>GIT</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="skills-item">
+                        <img src="img/figma.png" alt="FIGMA">
+                        <h4>FIGMA</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="skills-item">
+                        <img src="img/python.png" alt="Python">
+                        <h4>PYTHON</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="skills-item">
+                        <img src="img/php.png" alt="PHP">
+                        <h4>PHP</h4>
+                    </div>
+                </li>
+            </ul>
+        </section>
 
-                <div class="pastimes-item">
-                    <span class="jam jam-basketball"></span>
-                    <h4>Basketball</h4>
-                </div>
+        <section class="pastimes" id="Pastimes">
+            <h3>Pastimes</h3>
+            <ul class="pastimes-list">
+                <li>
+                    <div class="pastimes-item">
+                        <span class="jam jam-basketball"></span>
+                        <h4>Basketball</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="pastimes-item">
+                        <span class="jam jam-baseball"></span>
+                        <h4>Beisbol</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="pastimes-item">
+                        <span class="jam jam-coffee"></span>
+                        <h4>Cocinar</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="pastimes-item">
+                        <span class="jam jam-gamepad"></span>
+                        <h4>Videojuegos</h4>
+                    </div>
+                </li>
+                <li>
+                    <div class="pastimes-item">
+                        <span class="jam jam-headset"></span>
+                        <h4>Oir Música</h4>
+                    </div>
+                </li>
+            </ul>
+        </section>
 
-            </li>
-            <li>
+        <section class="learning" id="learning">
+            <h3>Learning</h3>
+            <ul class="learning-list">
+                <li>
+                    <div class="learning-item">
+                        <img src="img/unicaribe.png" alt="udemy">
+                        <h4>Tecnología de la Información</h4>
+                        <p>Universidad del Caribe</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="learning-item">
+                        <img src="img/udemy.jpeg" alt="udemy">
+                        <h4>Python</h4>
+                        <p>2023 - Udemy</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="learning-item">
+                        <img src="img/testing.jpeg" alt="udemy">
+                        <h4>QA Testing</h4>
+                        <p>2023 - Udemy</p>
+                    </div>
+                </li>
+                <li>
+                    <div class="learning-item">
+                        <img src="img/alura.png" alt="alura">
+                        <h4>Desarrollo Web - Frontend</h4>
+                        <p>Actualidad - Alura/Oracle</p>
+                    </div>
+                </li>
+            </ul>
+        </section>
 
-                <div class="pastimes-item">
-                    <span class="jam jam-baseball"></span>
-                    <h4>Beisbol</h4>
-                </div>
-
-            </li>
-            <li>
-
-                <div class="pastimes-item">
-                    <span class="jam jam-coffee"></span>
-                    <h4>Cocinar</h4>
-                </div>
-
-            </li>
-            <li>
-
-                <div class="pastimes-item">
-                    <span class="jam jam-gamepad"></span>
-                    <h4>videojuegos</h4>
-                </div>
-
-            </li>
-            <li>
-
-                <div class="pastimes-item">
-                    <span class="jam jam-headset"></span>
-                    <h4>Oir Musica</h4>
-                </div>
-
-            </li>
-        </ul>
-     </section>
-
-     <section class="learning" id="learning">
-        <h3>Learning</h3>
-        <ul class="learning-list">
-            <li>
-                <div class="learning-item">
-                    <img src="/img/unicaribe.png" alt="udemy">
-                    <h4>Tecnologia de la Informacion</h4>
-                    <p>Universidad del Caribe</p>
-                </div>
-            </li>
-            <li>
-                <div class="learning-item">
-                    <img src="/img/udemy.jpeg" alt="udemy">
-                    <h4>Python</h4>
-                    <p>2023 - Udemy</p>
-                </div>
-            </li>
-            <li>
-                <div class="learning-item">
-                    <img src="/img/testing.jpeg" alt="udemy">
-                    <h4>QA Testing</h4>
-                    <p>2023 - Udemy</p>
-                </div>
-            </li>
-            <li>
-                <div class="learning-item">
-                    <img src="/img/alura.png" alt="alura">
-                    <h4>Desarrollo Web - Frontend</h4>
-                    <p>Actualidad - Alura/Oracle</p>
-                </div>
-            </li>
-        </ul>
-    </section>
-
-    <section class="works" id="Works">
-        <h3>Works</h3>
-        <ul class="works-list">
-            <li>
-                <div class="works-list-item">
-                    <img src="/img/juego-secreto.png" alt="juego-secreto">
-                    <div class="works-list-item-description">
-                        <h4>Juego Secreto</h4>
-                        <p>Adivinar el numero secreto</p>
-                        <div class="works-list-item">
-                            <a class="works-list-item-repo"
-                                href="https://github.com/JLK1425/Juego-secreto.git">Repositorio</a>
-                            <a class="works-list-item-demo"
-                                href="https://jlk1425.github.io/Juego-secreto/">Ver demo</a>
+        <section class="works" id="Works">
+            <h3>Works</h3>
+            <ul class="works-list">
+                <li>
+                    <div class="works-list-item">
+                        <img src="img/juego-secreto.png" alt="juego-secreto">
+                        <div class="works-list-item-description">
+                            <h4>Juego Secreto</h4>
+                            <p>Adivinar el número secreto</p>
+                            <div class="works-list-item">
+                                <a class="works-list-item-repo" href="https://github.com/JLK1425/Juego-secreto.git">Repositorio</a>
+                                <a class="works-list-item-demo" href="https://jlk1425.github.io/Juego-secreto/">Ver demo</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </li>
-        </ul>    
-    </section>
+                </li>
+            </ul>    
+        </section>
 
-    <section class="contacto" id="Contacto">
-            <img src="/img/work.jpeg" alt="nego">
+        <section class="contacto" id="Contacto">
+            <img src="img/work.jpeg" alt="nego">
             <div class="contacto-pregunta">
                 <h3>Contacto</h3>
                 <p>¿Quieres contactarme?</p>
@@ -237,17 +219,15 @@
                     <form>
                         <div class="contacto-form-familia">
                             <label for="nombreCompleto">Nombre completo:</label>
-                            <input type=" text" id="nombreCompleto" required placeholder="Ingrese su nombre completo">
+                            <input type="text" id="nombreCompleto" required placeholder="Ingrese su nombre completo">
                         </div>
                         <div class="contacto-form-familia">
-                            <label for="email">Correo Electronico: </label>
+                            <label for="email">Correo Electrónico: </label>
                             <input type="email" id="email" required placeholder="Ingrese su correo">
                         </div>
                         <div class="contacto-form-familia">
-                            <label for="mensaje">
-                                Mensaje:
-                                <textarea name="" id="mensaje" cols="30" rows="10"></textarea>
-                            </label>
+                            <label for="mensaje">Mensaje:</label>
+                            <textarea id="mensaje" cols="30" rows="10"></textarea>
                         </div>
                         <div class="contacto-form-familia-boton">
                             <input type="submit" value="Enviar respuesta">
@@ -255,10 +235,10 @@
                     </form>
                 </div>
             </div>
-    </section>
+        </section>
     </main>
     <footer>
         <p>Desarrollado por Joel Alberto Abreu De la Rosa. | 2024</p>
     </footer>
- </body>
+</body>
 </html>
